# mupdf-mini-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml  rust.yml
examples/: realimg_demo.rs  showcase.rs
src/: document.rs  error.rs  lib.rs  main.rs  render.rs  viewer.rs
tests/: integration.rs
